--- a/_quarto.yml
+++ b/_quarto.yml
@@ -4,7 +4,7 @@ project:
   resources: scripts
 
 website:
-  title: "Team 12"
+  title: "MA [46]15 Final Project - TEAM 12"
   navbar:
     right:
       - about.qmd
